devops_course_yadro/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: currency-service
spec:
  type: ClusterIP
  selector:
    app: currency
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8000
