devops_course_yadro/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: currency-ingress
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - currency.local
    secretName: tls-secret
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: currency-service
            port:
              number: 80
